copy flicker on load fixed

--- a/src/scss/pages/_our_range.scss
+++ b/src/scss/pages/_our_range.scss
@@ -125,6 +125,14 @@
     }
 
     .controls {
+        transition: opacity 0.2s ease-out;
+        user-select: none;
+
+        &.disabled {
+            pointer-events: none;
+            opacity: 0.5;
+        }
+
         div {
             position: absolute;
             top: 25%;
